[package]
name = "real-time-lip-sync-gd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git" }
lazy_static = "1.4.0"
rand = "0.8.4"
